fix(website): keep mascot big on small screens
On small screens, we lack space, so we shrink Dusty. I think this looks
ugly. Keep Dusty large and hide the tag line instead.

This makes 'quick-lint-js' word-wrap, but I think that's okay.

--- a/website/public/main.css
+++ b/website/public/main.css
@@ -201,17 +201,16 @@ header .mascot {
   height: var(--mascot-height);
 }
 
-/* On smaller screens, put the mascot under the title. */
+/* On smaller screens, hide the tag line. */
 @media only screen and (max-width: 32em) {
   header {
-    --mascot-height: var(--tag-line-height);
     grid-template-areas:
-      "title title main-nav"
-      "mascot tag-line main-nav"
+      "mascot title main-nav"
+      "mascot mascot main-nav"
       "breadcrumbs breadcrumbs main-nav";
   }
-  header > .mascot {
-    margin-top: 0.5rem;
+  header > .tag-line {
+    display: none;
   }
 }
 
